# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Bzlmod module definition for nvcf-helm-reval-api.

Two cmd binaries:
  cmd/reval         -- standalone Helm-revalidation CLI.
  cmd/reval-service -- HTTP server that runs revalidation against function
                       deployments; this is what the production image ships.

Two test fixtures under test/:
  test/registry     -- local OCI registry test harness.
  test/mockjwks     -- JWKS endpoint fake.

Private NVIDIA module consumed via go_deps:
  github.com/NVIDIA/nvcf/src/libraries/go/lib                  -> nvcf-go

The upstream go.mod cannot fetch these via GOPROXY without a private-repo
token. The Bazel job's git URL rewrite lets go_deps fetch the module, and
the override below regenerates its BUILD.bazel files in this repo's bzlmod
context.

The umbrella nvcf/nvcf consumes this subtree under
src/control-plane-services/helm-reval as a synthetic import; this file is
picked up there too, but the umbrella's own root MODULE.bazel is what
Bazel uses end-to-end.
"""

module(
    name = "nvcf_helm_reval",
    version = "0.0.1",
)

# ============================================================================
# OCI containers (multi-arch). Mirrors the umbrella's MODULE.bazel.
# ============================================================================
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

# rules_pkg's `pkg_tar` runs through a Python builder, which pulls in
# rules_python's hermetic interpreter. CI runs as root in the bazel-ci
# container, and rules_python rejects root-user setup by default.
bazel_dep(name = "rules_python", version = "1.4.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

# ============================================================================
# Go
# ============================================================================
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# nvcf-go ships pre-generated BUILD.bazel files inside the module that
# reference `@rules_go`. From inside the fetched module's bzlmod context
# that name does not resolve; force Gazelle to re-generate the module's
# BUILD.bazel files in this repo's bzlmod context so the references work.
# Same workaround used by nvca + grpc-proxy.
go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = ["gazelle:proto disable_global"],
    path = "github.com/NVIDIA/nvcf/src/libraries/go/lib",
)

# Auto-managed by `bazel mod tidy`. The set is the transitive closure of
# the go.mod imports we actually use in cmd/, pkg/, reval/, and test/.
use_repo(
    go_deps,
    "com_github_felixge_httpsnoop",
    "com_github_go_chi_chi_v5",
    "com_github_go_chi_render",
    "com_github_golang_jwt_jwt_v5",
    "com_github_google_go_containerregistry",
    "com_github_hashicorp_golang_lru_v2",
    "com_github_lestrrat_go_jwx_v2",
    "com_github_nvidia_nvcf_src_libraries_go_lib",
    "com_github_prometheus_client_golang",
    "com_github_sourcegraph_conc",
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_sigs_controller_runtime",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_exporters_prometheus",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
    "land_oras_oras_go_v2",
    "org_golang_google_grpc",
    "org_uber_go_zap",
    "sh_helm_helm_v3",
)

# ============================================================================
# Prebuilt protoc toolchain. Pulled transitively by k8s.io/api which
# declares proto_library targets. Without this, Bazel builds C++ protoc
# from source on every cold build.
# ============================================================================
bazel_dep(name = "toolchains_protoc", version = "0.6.1")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v29.0",
)

# ============================================================================
# C++ cross-compilation (multi-arch container builds).
# Only the cross toolchain is registered; native arch uses host gcc.
# ============================================================================
zig = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_arm64_gnu.2.38",
)

# ============================================================================
# OCI base image. urm.nvidia.com is JFrog Artifactory; its
# WWW-Authenticate response advertises a realm URL that does not match
# the scope the token is later checked against. rules_oci's downloader
# can't sniff WWW-Authenticate at runtime, so we hand-write the working
# challenge here. Reused verbatim from nvca + grpc-proxy.
# ============================================================================
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_go",
    digest = "sha256:6be4473eca4e8a5fdf8d7103a4d35708f5538bb5f7a58f0d12a257bdf362334f",
    image = "urm.nvidia.com/sw-gpu-ucs-hardened-docker/distroless/go",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    www_authenticate_challenges = {
        "urm.nvidia.com": "Bearer realm=\"https://urm.nvidia.com/artifactory/api/docker/null/v2/token\",service=\"urm.nvidia.com\",scope=\"repository:{repository}:pull\"",
    },
)
use_repo(
    oci,
    "distroless_go",
    "distroless_go_linux_amd64",
    "distroless_go_linux_arm64_v8",
)
