# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//rules/oci:defs.bzl", "go_oci_image")

# gazelle:prefix nvcf-grpc-proxy
# gazelle:exclude local
# gazelle:exclude vault
# Keep the pre-generated nvcf/pb/*.pb.go and ratelimiter/pb/*.pb.go as
# plain Go sources; do not regenerate them from .proto here. The upstream
# repo's existing protoc flow handles regeneration; Bazel just compiles
# the committed .pb.go files. Saves us a full protoc rules setup for a
# pilot that does not need it.
# gazelle:proto disable_global
# gazelle:go_naming_convention import_alias
gazelle(name = "gazelle")

go_library(
    name = "nvcf-grpc-proxy_lib",
    srcs = ["main.go"],
    importpath = "nvcf-grpc-proxy",
    visibility = ["//visibility:private"],
    # Build-time stamping, resolved by tools/workspace_status.sh when bazel
    # is invoked with --stamp (the CI release jobs pass it). STABLE_VERSION
    # is the release semver (NVCF_VERSION / tag), which is also the primary
    # container tag pushed by the release pipeline, so the reported
    # service.version matches the image tag. proxy.getVersion() prefers the
    # VERSION env var, then this stamped value, then the Go VCS build info
    # (absent under Bazel).
    x_defs = {
        "nvcf-grpc-proxy/proxy.version": "{STABLE_VERSION}",
    },
    deps = [
        "//proxy",
        "@com_github_nvidia_nvcf_go//pkg/nvkit/config",
        "@com_github_nvidia_nvcf_go//pkg/nvkit/logs",
        "@com_github_nvidia_nvcf_go//pkg/nvkit/tracing",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "nvcf-grpc-proxy",
    embed = [":nvcf-grpc-proxy_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "nvcf-grpc-proxy_test",
    srcs = ["main_test.go"],
    embed = [":nvcf-grpc-proxy_lib"],
    deps = [
        "@com_github_samber_lo//:lo",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_zap//:zap",
    ],
)

# Multi-arch OCI image. Matches the existing Dockerfile contract: the
# binary lands at /usr/bin/app on a hardened distroless/go base.
# Generated targets:
#   //:image            host-arch image
#   //:image_index      multi-arch index (amd64 + arm64)
#   //:image_load       loads host-arch image into local docker
# Push targets are defined in //nvidia-internal:BUILD.bazel so that the
# internal registry coordinates stay out of the public OSS snapshot.
# The distroless/go base ships ENTRYPOINT ["/usr/bin/shelless_ulimit"], a shim
# that raises RLIMIT_NOFILE (soft -> hard) when ULIMIT_FLAG=1 before exec'ing
# its arguments. The legacy Dockerfile relied on that base entrypoint plus
# ENV ULIMIT_FLAG=1; go_oci_image otherwise overrides the entrypoint with just
# [binary_path], bypassing the shim and leaving the default 1024 soft fd limit.
# Restore the shim + flag so the Bazel image matches the Dockerfile.
go_oci_image(
    name = "image",
    base = "@distroless_go",
    binary = ":nvcf-grpc-proxy",
    binary_path = "/usr/bin/app",
    entrypoint = [
        "/usr/bin/shelless_ulimit",
        "/usr/bin/app",
    ],
    env = {"ULIMIT_FLAG": "1"},
    tags = ["nvcf-grpc-proxy"],
    visibility = ["//visibility:public"],
)
