# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Bzlmod module definition for nvcf-grpc-proxy.

Single Go binary at the repo root (main.go + main_test.go) plus the
proxy/ package. No vendor/; deps resolve via Gazelle's go_deps extension
from go.mod.

This file is also consumed when the service is synced as a subtree of the
NVCF umbrella repo (nvcf/nvcf), but the umbrella's own root MODULE.bazel
is what Bazel uses there.
"""

module(
    name = "nvcf_grpc_proxy",
    version = "0.0.1",
)

# ============================================================================
# OCI containers (multi-arch).
#
# Mirrors the umbrella's MODULE.bazel deps. Will be consolidated when this
# repo is consumed natively under nvcf/nvcf.
# ============================================================================
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.2.0")

# NVCF central NVCR image-push destinations catalog. The umbrella's
# `//nvidia-internal/rules/oci` tree publishes a Bazel module with
# the shared NVCR_DESTINATIONS map + nvcr_image_pushes macro;
# depending on it via bazel_dep + local_path_override lets every
# service load from a single source of truth without duplicating the
# catalog. See nvidia-internal/BUILD.bazel for the load call. Lives
# under nvidia-internal/ so the catalog stays off the OSS mirror.
bazel_dep(name = "nvcf_nvcr_destinations", version = "0.0.0")
local_path_override(
    module_name = "nvcf_nvcr_destinations",
    path = "../../../nvidia-internal/rules/oci",
)
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

# rules_pkg's `pkg_tar` runs through a Python builder, which pulls in
# rules_python's hermetic interpreter. CI runs as root inside the
# bazel-ci container, and rules_python rejects root-user setup by
# default (https://github.com/bazelbuild/rules_python/pull/713).
# Opt out of the check explicitly so the OCI image layer can build
# in CI without having to demote the job user.
bazel_dep(name = "rules_python", version = "1.4.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

# ============================================================================
# Go
# ============================================================================
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# nvcf-go ships .proto files inside its module, and Gazelle (when fetching
# the module via go_deps) generates proto_library + go_proto_library
# targets that reference protoc-gen-openapiv2 annotations. Those
# annotations are not vendored as Bazel packages in the fetched module,
# so the analysis phase fails with "BUILD file not found in directory
# protoc-gen-openapiv2/options". The pre-generated .pb.go files in the
# module are already adequate for what grpc-proxy uses; disable proto-
# aware build generation for this dep so Gazelle treats the .pb.go files
# as plain Go sources.
go_deps.gazelle_override(
    directives = ["gazelle:proto disable_global"],
    path = "github.com/NVIDIA/nvcf-go",
)

# Auto-managed by `bazel mod tidy`. Re-run after adding new imports.
# Initial seed below is the minimum the proxy/ package needs; the tidy
# command will reconcile against the actual transitive closure.
use_repo(
    go_deps,
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_carlmjohnson_versioninfo",
    "com_github_docker_go_connections",
    "com_github_fsnotify_fsnotify",
    "com_github_go_chi_cors",
    "com_github_goccy_go_json",
    "com_github_google_uuid",
    "com_github_gorilla_websocket",
    "com_github_grpc_ecosystem_go_grpc_middleware",
    "com_github_hashicorp_go_metrics",
    "com_github_hellofresh_health_go_v5",
    "com_github_jellydator_ttlcache_v3",
    "com_github_madappgang_httplog",
    "com_github_madappgang_httplog_zap",
    "com_github_nats_io_nats_go",
    "com_github_nats_io_nkeys",
    "com_github_nvidia_nvcf_go",
    "com_github_prometheus_client_golang",
    "com_github_quic_go_quic_go",
    "com_github_samber_lo",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_stretchr_testify",
    "com_github_testcontainers_testcontainers_go",
    "com_github_testcontainers_testcontainers_go_modules_localstack",
    "io_opentelemetry_go_contrib_instrumentation_github_com_aws_aws_sdk_go_v2_otelaws",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_prometheus",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_net",
    "org_golang_x_sync",
    "org_uber_go_atomic",
    "org_uber_go_zap",
)

# ============================================================================
# Prebuilt protoc toolchain.
# ============================================================================
bazel_dep(name = "toolchains_protoc", version = "0.6.1")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v29.0",
)

# ============================================================================
# C++ cross-compilation (multi-arch container builds).
# Only the cross toolchain is registered; native arch uses host gcc.
# ============================================================================
zig = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_arm64_gnu.2.38",
)

# ============================================================================
# OCI base image. Canonical NV publish location for the hardened Go
# distroless image. Same pin used by `egx/intelligent-infra/nvca`.
# ============================================================================
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_go",
    digest = "sha256:2ae1c3f90de1735fefb2a951977b7e78aa1c691f345d58c87b0d6bb7eff4f4d5",
    image = "nvcr.io/nvidia/distroless/go",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(
    oci,
    "distroless_go",
    "distroless_go_linux_amd64",
    "distroless_go_linux_arm64_v8",
)
