# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Bzlmod module definition for llm-api-gateway.

Two binaries:
  cmd/llm-api-gateway                     -> main HTTP gateway
  cmd/llm-api-gateway-rate-limit-sync-worker -> rate limit sync worker
"""

module(
    name = "llm_api_gateway",
    version = "0.0.1",
)

# ============================================================================
# OCI containers.
# ============================================================================
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")
bazel_dep(name = "rules_python", version = "1.4.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

# ============================================================================
# Go.
# ============================================================================
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.6")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# The shared NVCF Go library ships generated BUILD.bazel files from a different
# bzlmod context. Regenerate them here and treat committed .pb.go files as
# plain Go sources, matching the ratelimiter module.
go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = ["gazelle:proto disable_global"],
    path = "github.com/NVIDIA/nvcf/src/libraries/go/lib",
)

# Prebuilt protoc toolchain. Required because grpc-gateway-v2, pulled in by the
# shared NVCF Go library, declares a proto_library.
bazel_dep(name = "toolchains_protoc", version = "0.6.1")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v29.0",
)

use_repo(
    go_deps,
    "com_github_go_viper_mapstructure_v2",
    "com_github_google_uuid",
    "com_github_kaptinlin_jsonrepair",
    "com_github_labstack_echo_v4",
    "com_github_nats_io_nats_go",
    "com_github_nvidia_nvcf_src_libraries_go_lib",
    "com_github_olric_data_olric",
    "com_github_prometheus_client_golang",
    "com_github_prometheus_common",
    "com_github_prometheus_otlptranslator",
    "com_github_rs_zerolog",
    "com_github_santhosh_tekuri_jsonschema_v5",
    "com_github_stretchr_testify",
    "com_google_cloud_go_pubsub_v2",
    "com_jetify_go_sse",
    "com_jetify_go_typeid",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp",
    "io_opentelemetry_go_otel_exporters_prometheus",
    "io_opentelemetry_go_otel_exporters_stdout_stdouttrace",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_api",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_sync",
    "org_uber_go_mock",
    "tools_gotest_v3",
)

# ============================================================================
# C++ cross-compilation (multi-arch container builds).
# ============================================================================
zig = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_arm64_gnu.2.38",
)

# ============================================================================
# OCI base image. NVIDIA distroless/go: a minimal hardened Debian userland
# with NVIDIA-patched glibc/OpenSSL and CA certs. The CGO_ENABLED=0 binaries
# do not link against those libraries; the CVE posture comes from the newer
# patched packages, not from their absence. The image's non-root user is
# nvs (uid 1000). The digest pins v4.0.8.
# ============================================================================
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_go",
    digest = "sha256:938bd28ce4ddb800118a951774203e7563c2067a72b20ae6b85d2c7da165a178",
    image = "nvcr.io/nvidia/distroless/go",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(
    oci,
    "distroless_go",
    "distroless_go_linux_amd64",
    "distroless_go_linux_arm64_v8",
)
