# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix ratelimiter
# Keep the pre-generated nvcf/pb/*.pb.go as plain Go sources; the
# upstream nvcf-go's existing protoc flow handles regeneration, Bazel
# just compiles the committed .pb.go files. Saves a full protoc rules
# setup for the additive scaffold.
# gazelle:proto disable_global
# gazelle:go_naming_convention import_alias
gazelle(name = "gazelle")

go_library(
    name = "ratelimiter",
    srcs = [
        "nvcf_client.go",
        "olric_k8s.go",
        "olric_stats.go",
        "olric_store.go",
        "rate_limiter.go",
        "version.go",
    ],
    importpath = "ratelimiter",
    visibility = ["//visibility:public"],
    # Build-time stamping, resolved by tools/workspace_status.sh when bazel
    # is invoked with --stamp (the CI release jobs pass it). STABLE_VERSION
    # is the release semver, which is also the primary container tag, so the
    # reported service.version matches the image tag. getVersion() prefers
    # the VERSION env var, then this stamped value, then the Go VCS build
    # info (absent under Bazel).
    x_defs = {
        "ratelimiter.version": "{STABLE_VERSION}",
    },
    deps = [
        "//credentials",
        "//nvcf/pb",
        "//pb",
        "@com_github_auth0_go_jwt_middleware_v2//jwks",
        "@com_github_auth0_go_jwt_middleware_v2//validator",
        "@com_github_carlmjohnson_versioninfo//:versioninfo",
        "@com_github_grpc_ecosystem_go_grpc_middleware_providers_prometheus//:prometheus",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/auth",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/logging",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/recovery",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/selector",
        "@com_github_jellydator_ttlcache_v3//:ttlcache",
        "@com_github_nvidia_nvcf_src_libraries_go_lib//pkg/nvkit/auth",
        "@com_github_nvidia_nvcf_src_libraries_go_lib//pkg/nvkit/clients",
        "@com_github_nvidia_nvcf_src_libraries_go_lib//pkg/nvkit/tracing",
        "@com_github_olric_data_olric//:olric",
        "@com_github_olric_data_olric//config",
        "@com_github_olric_data_olric//pkg/service_discovery",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_ulule_limiter_v3//:limiter",
        "@com_github_ulule_limiter_v3//drivers/store/common",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//health",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//reflection/grpc_reflection_v1",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//singleflight",
        "@org_uber_go_zap//:zap",
    ],
)

alias(
    name = "go_default_library",
    actual = ":ratelimiter",
    visibility = ["//visibility:public"],
)

go_test(
    name = "ratelimiter_test",
    srcs = [
        "nvcf_client_test.go",
        "rate_limiter_test.go",
        "version_test.go",
    ],
    embed = [":ratelimiter"],
    deps = [
        "//nvcf/pb",
        "@com_github_carlmjohnson_versioninfo//:versioninfo",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_ulule_limiter_v3//drivers/store/memory",
        "@org_golang_google_grpc//:grpc",
        "@org_uber_go_zap//:zap",
    ],
)
