# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Bzlmod module definition for nvcf-ratelimiter.

Mirrors the canonical Phase B pattern from nvcf-grpc-proxy: standalone
Bazel module with full build + test + multi-arch OCI image packaging.
The umbrella nvcf/nvcf consumes this subtree as a synthetic import;
this file is also picked up there but the umbrella has its own root
MODULE.bazel.
"""

module(
    name = "nvcf_ratelimiter",
    version = "0.0.1",
)

# ============================================================================
# OCI containers (multi-arch). Mirrors the umbrella's MODULE.bazel.
# ============================================================================
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

# rules_pkg's `pkg_tar` runs through a Python builder, which pulls in
# rules_python's hermetic interpreter. CI runs as root in the bazel-ci
# container, and rules_python rejects root-user setup by default
# (https://github.com/bazelbuild/rules_python/pull/713). Opt out so
# the OCI image layer can build in CI without demoting the job user.
bazel_dep(name = "rules_python", version = "1.4.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# The shared NVCF Go library (previously vendored as github.com/NVIDIA/nvcf-go;
# moved to github.com/NVIDIA/nvcf/src/libraries/go/lib in master's
# `f62642f fix: import from monorepo`):
#
# (a) ships pre-generated BUILD.bazel files that reference `@rules_go`,
#     which does not resolve from inside the fetched module's bzlmod
#     namespace. `build_file_generation = "clean"` forces Gazelle to
#     re-generate the BUILD files in this repo's bzlmod context so
#     `@rules_go` resolves. Same workaround used by helm-reval-api +
#     nvca + grpc-proxy.
#
# (b) ships .proto files; Gazelle generates proto_library +
#     go_proto_library targets that reference protoc-gen-openapiv2
#     annotations not vendored as Bazel packages in the fetched
#     module. The pre-generated .pb.go files are adequate, so
#     `gazelle:proto disable_global` lets Gazelle treat them as plain
#     Go sources.
go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = ["gazelle:proto disable_global"],
    path = "github.com/NVIDIA/nvcf/src/libraries/go/lib",
)

# Prebuilt protoc toolchain. Required because grpc-gateway-v2 (a
# transitive dep) declares a proto_library; without this, rules_go's
# proto-toolchain resolution fails with "No toolchains registered for
# '@rules_proto//proto:toolchain_type'". toolchains_protoc downloads
# the official prebuilt protoc binary so we don't build the C++ protoc
# compiler from source.
bazel_dep(name = "toolchains_protoc", version = "0.6.1")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v29.0",
)

# ============================================================================
# C++ cross-compilation (multi-arch container builds).
# Only the cross toolchain is registered; native arch uses host gcc.
# ============================================================================
zig = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_arm64_gnu.2.38",
)

# ============================================================================
# OCI base image. Matches the existing Dockerfile contract
# (urm.nvidia.com/sw-gpu-ucs-hardened-docker/distroless/go:v3.1.10).
#
# urm.nvidia.com is JFrog Artifactory; its WWW-Authenticate response
# advertises a realm URL that does not match the scope the token is
# later checked against. The skopeo / docker-cli flow works around
# this by using `/artifactory/api/docker/null/v2/token` as the realm
# and the full repository path as the scope. rules_oci's downloader
# can't sniff WWW-Authenticate at runtime, so we hand-write the
# working challenge here. Reused verbatim from nvcf-grpc-proxy.
# ============================================================================
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_go",
    digest = "sha256:6be4473eca4e8a5fdf8d7103a4d35708f5538bb5f7a58f0d12a257bdf362334f",
    # NVIDIA-internal Artifactory mirror of the upstream distroless/go
    # image. OSS contributors building from the GitHub mirror without
    # urm.nvidia.com access can swap this for a public distroless base
    # such as `gcr.io/distroless/static-debian12` and re-run
    # `bazel mod tidy` to refresh the lockfile. `bazel build //...` and
    # `bazel test //...` work without the swap once a public base is
    # in place.
    image = "urm.nvidia.com/sw-gpu-ucs-hardened-docker/distroless/go",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    www_authenticate_challenges = {
        "urm.nvidia.com": "Bearer realm=\"https://urm.nvidia.com/artifactory/api/docker/null/v2/token\",service=\"urm.nvidia.com\",scope=\"repository:{repository}:pull\"",
    },
)
use_repo(
    oci,
    "distroless_go",
    "distroless_go_linux_amd64",
    "distroless_go_linux_arm64_v8",
)

use_repo(go_deps, "com_github_auth0_go_jwt_middleware_v2", "com_github_carlmjohnson_versioninfo", "com_github_fsnotify_fsnotify", "com_github_golang_jwt_jwt_v4", "com_github_google_uuid", "com_github_grpc_ecosystem_go_grpc_middleware_providers_prometheus", "com_github_grpc_ecosystem_go_grpc_middleware_v2", "com_github_jellydator_ttlcache_v3", "com_github_lestrrat_go_jwx", "com_github_nvidia_nvcf_src_libraries_go_lib", "com_github_olric_data_olric", "com_github_prometheus_client_golang", "com_github_spf13_cobra", "com_github_spf13_pflag", "com_github_stretchr_testify", "com_github_ulule_limiter_v3", "io_k8s_api", "io_k8s_apimachinery", "io_k8s_client_go", "io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc", "io_opentelemetry_go_otel", "io_opentelemetry_go_otel_trace", "org_golang_google_grpc", "org_golang_google_protobuf", "org_golang_x_exp", "org_golang_x_sync", "org_uber_go_zap")
